XSS対策と、jsonファイルが存在しない場合に"{}"を加えてファイルを新規作成する処理を追加

--- a/views/edit.erb
+++ b/views/edit.erb
@@ -12,11 +12,11 @@
     <form action="/memos/<%=@id%>" method="post">
     <div>
         <label for="title">タイトル</label><br>
-        <textarea type="text" name="title" id="title" cols="20" rows="1"><%=@memo["title"]%></textarea><br>
+        <textarea type="text" name="title" id="title" cols="20" rows="1"><%=h(@memo["title"])%></textarea><br>
     </div>
     <div>
         <label for="content">内容</label><br>
-        <textarea type="text" name="content" id="content" cols="20" rows="10"><%=@memo["content"]%></textarea><br>
+        <textarea type="text" name="content" id="content" cols="20" rows="10"><%=h(@memo["content"])%></textarea><br>
     </div>
     <div>
         <input type="hidden" name="_method" value="PATCH">
